Changes for Windows - Fixed extra space taken for titlebar in normal window mode - Added preference for fullscreen menu - Fullscreen menu and control when preference is applied is no longer a part of the tabs toolbar

--- a/chrome/skin/classic/fstbh/mac/preferences/config.css
+++ b/chrome/skin/classic/fstbh/mac/preferences/config.css
@@ -1,3 +1,4 @@
+#com_sppad_fstbh_fullscreenMenu_checkbox,
 #com_sppad_fstbh_topChromeBackground_groupbox {
 	display: none;
 }
